5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1834_1278.log
== TEST (2019-06-22 19:43:30) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(a != -1 or b != -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	b = int(input("Digite o codigo para a cidade B: "))
print(tempo)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 19:46:44) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(a != -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	b = int(input("Digite o codigo para a cidade B: "))
print(tempo)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 19:47:32) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(a != -1 or b!= -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	b = int(input("Digite o codigo para a cidade B: "))
print(tempo)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 19:48:15) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(a != -1 and b!= -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	b = int(input("Digite o codigo para a cidade B: "))
print(tempo)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 19:48:45) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(a != -1 and b!= -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	b = int(input("Digite o codigo para a cidade B: "))
print(tempo)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 19:49:24) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(a != -1 and b!= -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	b = int(input("Digite o codigo para a cidade B: "))
print(tempo)	
-- EXECUTION TIME:
1.24613
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 18, in <module>
    b = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 19:51:25) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(tempo >= 0):
	if (a != -1):
		i = (a//111) - 1
		j = (b//111) - 1
		tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	b = int(input("Digite o codigo para a cidade B: "))
print(tempo)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 19:53:43) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(tempo >= 0):
		i = (a//111) - 1
		j = (b//111) - 1
		tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	if (a != -1):
		b = int(input("Digite o codigo para a cidade B: "))
print(tempo)	
-- ERROR:
File "XXXX", line 17
    a = int(input())
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 19:54:31) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(tempo >= 0):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	if (a != -1):
		b = int(input("Digite o codigo para a cidade B: "))
print(tempo)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 19:56:11) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(a != -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	b = int(input("Digite o codigo para a cidade B: "))
print(tempo)	
-- EXECUTION TIME:
1.079
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 18, in <module>
    b = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 20:00:51) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(a != -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
		if(a== -1):
			print(tempo)
		else:	
			b = int(input("Digite o codigo para a cidade B: "))
print(tempo)	
-- ERROR:
File "XXXX", line 18
    if(a== -1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 20:01:11) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(a != -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	if(a== -1):
		print(tempo)
	else:	
		b = int(input("Digite o codigo para a cidade B: "))
print(tempo)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 20:01:43) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(a != -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	if(a== -1):
		print(tempo)
	else:	
		b = int(input("Digite o codigo para a cidade B: "))
	
-- EXECUTION TIME:
1.19298
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
19
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
34
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
Digite o codigo para a cidade A: Digite o codigo para a cidade B: Digite o codigo para a cidade A: Digite o codigo para a cidade B: Digite o codigo para a cidade A: Digite o codigo para a cidade B: Digite o codigo para a cidade A: Digite o codigo para a cidade B: Digite o codigo para a cidade A: 29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 20:01:50) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(a != -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	if(a== -1):
		print(tempo)
	else:	
		b = int(input("Digite o codigo para a cidade B: "))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 20:03:10) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(tempo >= 0):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	if(a== -1):
		print(tempo)
	else:	
		b = int(input("Digite o codigo para a cidade B: "))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 20:03:58) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(a != -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	if(a== -1):
		print(tempo)
	else:	
		b = int(input("Digite o codigo para a cidade B: "))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 20:04:52) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(a != -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	if(a == -1 or b == -1):
		print(tempo)
	else:	
		b = int(input("Digite o codigo para a cidade B: "))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 20:07:22) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(a != -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	if(a == -1):
		print(tempo)
	else:	
		b = int(input("Digite o codigo para a cidade B: "))
			if(b == -1):
				print(tempo)
	
-- ERROR:
File "XXXX", line 22
    if(b == -1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 20:07:35) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(a != -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	if(a == -1):
		print(tempo)
	else:	
		b = int(input("Digite o codigo para a cidade B: "))
		if(b == -1):
			print(tempo)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 20:08:48) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(a != -1 and b 1= -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	if(a == -1):
		print(tempo)
	else:	
		b = int(input("Digite o codigo para a cidade B: "))
		if(b == -1):
			print(tempo)
	
-- ERROR:
File "XXXX", line 13
    while(a != -1 and b 1= -1):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 20:09:08) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(a != -1 and b != -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	if(a == -1):
		print(tempo)
	else:	
		b = int(input("Digite o codigo para a cidade B: "))
		if(b == -1):
			print(tempo)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 20:09:36) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(a != -1 and b != -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	if(a == -1):
		print(tempo)
	else:	
		b = int(input("Digite o codigo para a cidade B: "))
		if(b == -1):
			print(tempo)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 20:10:29) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(a != -1 and b != -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	if(a == -1):
		print(tempo)
	else:	
		b = int(input("Digite o codigo para a cidade B: "))
		if(b == -1):
			print(tempo)
	
-- EXECUTION TIME:
1.19961
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
19
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
34
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:39:50) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(a != -1 and b != -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = int(input("Digite o codigo para a cidade A: "))
	if(a == -1):
		print(tempo)
	else:	
		b = int(input("Digite o codigo para a cidade B: "))
		if(b == -1):
			print(tempo)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:52:16) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(a != -1 and b != -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]\
	c = int(input("Digite o codigo para a cidade A: "))
	while(c != -1):
	print(tempo)
	else:	
		if(b == -1):
			print(tempo)
	
-- ERROR:
File "XXXX", line 17
    c = int(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:59:45) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(b!= -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = b
	b = int(input("Digite o codigo para a cidade B: "))	
print(tempo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 16:00:04) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
tempo = 0
while(b!= -1):
	i = (a//111) - 1
	j = (b//111) - 1
	tempo = tempo + matdist[i, j]
	a = b
	b = int(input("Digite o codigo para a cidade B: "))	
print(tempo)
-- EXECUTION TIME:
0.893048
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:31:28) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
t = 0
while(b != -1):
	a = (a//111)-1
	b = (b//111)-1
	t = t+ matdist[a, b]
	a = b
	b = int(input("Digite o codigo para a cidade B: "))
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:33:16) 
-- CODE:
from numpy import *
from  numpy.linalg import *
matdist = array([[0, 2, 11, 6, 15, 11, 1],
					  [2, 0, 7, 12, 4, 2, 15],
					  [11, 7, 0, 11, 8, 3, 13],
					  [6, 12, 11, 0, 10, 2, 1],
					  [15, 4, 8, 10, 0, 5, 13],
					  [11, 2, 3, 2, 5, 0, 14],
					  [1, 15, 13, 1, 13, 14, 0]])
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
t = 0
while(b != -1):
	i = (a//111)-1
	j = (b//111)-1
	t = t + matdist[i, j]
	a = b
	b = int(input("Digite o codigo para a cidade B: "))
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
